--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -1,10 +1,254 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/cardview_dark_background">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dashboard"/>
+    <android.support.v7.widget.CardView
+        android:id="@+id/podium_card_view"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="8dp"
+        card_view:contentPadding="10dp">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:id="@+id/last_podium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="LAST PODIUM"
+                android:textStyle="bold"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/P1_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/last_podium"
+                android:text="1st"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/P1_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/last_podium"
+                android:layout_toRightOf="@id/P1_textView"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+            <TextView
+                android:id="@+id/P1_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/last_podium"
+                android:layout_toRightOf="@id/P1_name"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+            <!--P2-->
+            <TextView
+                android:id="@+id/P2_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P1_textView"
+                android:layout_marginTop="10dp"
+                android:text="2nd"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/P2_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P1_textView"
+                android:layout_toRightOf="@id/P2_textView"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+            <TextView
+                android:id="@+id/P2_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P1_textView"
+                android:layout_toRightOf="@id/P2_name"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+            <!--P3-->
+            <TextView
+                android:id="@+id/P3_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P2_textView"
+                android:layout_marginTop="10dp"
+                android:text="3rd"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/P3_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P2_textView"
+                android:layout_toRightOf="@id/P3_textView"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+            <TextView
+                android:id="@+id/P3_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/P2_textView"
+                android:layout_toRightOf="@id/P3_name"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--NEXT RACE CARDVIEW-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/next_race_card_view"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="8dp"
+        card_view:contentPadding="10dp">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:id="@+id/next_race"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="NEXT RACE"
+                android:textStyle="bold"
+                android:layout_marginBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/next_place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/next_race"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/next_country"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/next_race"
+                android:layout_toRightOf="@id/next_place"
+                android:layout_marginLeft="140dp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/next_circuit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/next_place"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/next_schedule"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/next_circuit"
+                android:layout_marginTop="10dp" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--DASHBOARD DRIVER STANDINGS CARDVIEW-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/dash_standing_card_view"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="8dp"
+        card_view:contentPadding="10dp">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:id="@+id/driver_standings_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="DRIVER STANDINGS"
+                android:layout_marginBottom="4dp"
+                android:textStyle="bold" />
+            <!--P1 standing-->
+            <TextView
+                android:id="@+id/dashb_std_p1_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/driver_standings_title"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <TextView
+                android:id="@+id/dashb_std_p1_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/driver_standings_title"
+                android:layout_toRightOf="@id/dashb_std_p1_name"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <!--P2 standing-->
+            <TextView
+                android:id="@+id/dashb_std_p2_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dashb_std_p1_name"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <TextView
+                android:id="@+id/dashb_std_p2_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/dashb_std_p1_name"
+                android:layout_toRightOf="@id/dashb_std_p2_name"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <!--P3 standing-->
+            <TextView
+                android:id="@+id/dashb_std_p3_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dashb_std_p2_name"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <TextView
+                android:id="@+id/dashb_std_p3_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dashb_std_p2_name"
+                android:layout_toRightOf="@id/dashb_std_p3_name"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
