--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -141,16 +141,26 @@
                 android:layout_below="@+id/next_race"
                 android:layout_marginTop="10dp" />
 
+
+            <ImageView
+                android:id="@+id/next_country_flag"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/next_race"
+                android:layout_toRightOf="@id/next_place"
+                android:layout_marginLeft="140dp"
+                android:scaleType="fitXY" />
+
             <TextView
                 android:id="@+id/next_country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/next_race"
+                android:layout_below="@+id/next_country_flag"
                 android:layout_toRightOf="@id/next_place"
-                android:layout_marginLeft="140dp"
+                android:layout_marginLeft="135dp"
                 android:textStyle="bold"
                 android:textAllCaps="true"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="2dp" />
 
             <TextView
                 android:id="@+id/next_circuit"
