--- a/app/src/main/res/layout/driver_standings.xml
+++ b/app/src/main/res/layout/driver_standings.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/cardview_dark_background"
-    >
+    android:background="@color/cardview_dark_background">
 
-    <android.support.v7.widget.RecyclerView
+    <com.malinskiy.superrecyclerview.SuperRecyclerView
         android:id="@+id/driver_standings_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
+        app:layout_empty="@layout/empty_result"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"
+        app:scrollbarStyle="outsideOverlay"
+        app:recyclerPadding="8dp"
         />
 
 </RelativeLayout>
