--- a/app/src/main/res/layout/driver_standings_item.xml
+++ b/app/src/main/res/layout/driver_standings_item.xml
@@ -1,60 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/cardview_dark_background">
+    android:id="@+id/driver_standings_card"
+    android:layout_width="fill_parent"
+    android:layout_height="100dp"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="8dp"
+    card_view:contentPadding="10dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/driver_standings_card"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        card_view:cardCornerRadius="8dp"
-        card_view:contentPadding="10dp">
+        android:layout_height="fill_parent">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+        <TextView
+            android:id="@+id/driver_std_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/driver_std_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="8dp"
-                android:text="NAME"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/driver_std_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/driver_std_name"
+            android:textStyle="bold"
+            android:textSize="32sp" />
 
-            <TextView
-                android:id="@+id/driver_std_position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/driver_std_name"
-                android:text="Position"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/driver_std_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/driver_std_name"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_toRightOf="@id/driver_std_position"/>
 
-            <TextView
-                android:id="@+id/driver_std_points"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/driver_std_name"
-                android:layout_marginLeft="@dimen/fab_margin"
-                android:layout_toRightOf="@id/driver_std_position"
-                android:text="POINTS" />
+        <TextView
+            android:id="@+id/driver_std_const"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/driver_std_name"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_toRightOf="@id/driver_std_points" />
 
-            <TextView
-                android:id="@+id/driver_std_const"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/driver_std_name"
-                android:layout_marginLeft="@dimen/fab_margin"
-                android:layout_toRightOf="@id/driver_std_points"
-                android:text="COSNTRUCTOR" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
