--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,10 @@
             android:id="@+id/nav_driver_standing"
             android:icon="@drawable/ic_menu_championship"
             android:title="Driver Standing" />
+        <item
+            android:id="@+id/nav_constructor_standing"
+            android:icon="@drawable/ic_menu_championship"
+            android:title="Constructor Standing" />
     </group>
 
     <item android:title="More">
