--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_menu_dashboard"
-            android:title="Dashboard" />
+            android:title="Feed" />
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_menu_date_range"
