Remove Next Gp from menu. Add Qualifying on its place and add all needed

--- a/app/src/main/res/layout/driver_standings_item.xml
+++ b/app/src/main/res/layout/driver_standings_item.xml
@@ -46,5 +46,12 @@
             android:layout_marginLeft="@dimen/fab_margin"
             android:layout_toRightOf="@id/driver_std_points" />
 
+        <ImageView
+            android:id="@+id/driver_std_flag"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:scaleType="fitXY" />
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
