--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -115,7 +115,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/next_race_card_view"
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="8dp"
@@ -139,16 +139,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/next_race"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:layout_marginTop="10dp" />
 
 
             <ImageView
                 android:id="@+id/next_country_flag"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_below="@+id/next_race"
-                android:layout_toRightOf="@id/next_place"
-                android:layout_marginLeft="140dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/fab_margin"
                 android:scaleType="fitXY" />
 
             <TextView
@@ -156,8 +157,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/next_country_flag"
-                android:layout_toRightOf="@id/next_place"
-                android:layout_marginLeft="135dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/fab_margin"
                 android:textStyle="bold"
                 android:textAllCaps="true"
                 android:layout_marginTop="2dp" />
@@ -166,6 +167,7 @@
                 android:id="@+id/next_circuit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:layout_below="@+id/next_place"
                 android:layout_marginTop="10dp" />
 
@@ -173,7 +175,16 @@
                 android:id="@+id/next_schedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:layout_below="@+id/next_circuit"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/next_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_below="@+id/next_schedule"
                 android:layout_marginTop="10dp" />
 
         </RelativeLayout>
@@ -220,6 +231,16 @@
                 android:layout_marginTop="10dp"
                 android:text="LOADING..." />
 
+            <TextView
+                android:id="@+id/dashb_std_p1_wins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/driver_standings_title"
+                android:layout_toRightOf="@id/dashb_std_p1_points"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
             <!--P2 standing-->
             <TextView
                 android:id="@+id/dashb_std_p2_name"
@@ -239,6 +260,16 @@
                 android:layout_marginTop="10dp"
                 android:text="LOADING..." />
 
+            <TextView
+                android:id="@+id/dashb_std_p2_wins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dashb_std_p1_name"
+                android:layout_toRightOf="@id/dashb_std_p2_points"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
             <!--P3 standing-->
             <TextView
                 android:id="@+id/dashb_std_p3_name"
@@ -254,6 +285,16 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/dashb_std_p2_name"
                 android:layout_toRightOf="@id/dashb_std_p3_name"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginTop="10dp"
+                android:text="LOADING..." />
+
+            <TextView
+                android:id="@+id/dashb_std_p3_wins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dashb_std_p2_name"
+                android:layout_toRightOf="@id/dashb_std_p3_points"
                 android:layout_marginLeft="@dimen/fab_margin"
                 android:layout_marginTop="10dp"
                 android:text="LOADING..." />
