--- a/app/src/main/res/layout/qualifying_item.xml
+++ b/app/src/main/res/layout/qualifying_item.xml
@@ -2,7 +2,7 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constructor_standings_card"
+    android:id="@+id/qualifying_card"
     android:layout_width="fill_parent"
     android:layout_height="100dp"
     android:layout_gravity="center"
@@ -15,7 +15,7 @@
         android:layout_height="fill_parent">
 
         <TextView
-            android:id="@+id/constructor_std_name"
+            android:id="@+id/q_driver_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -23,35 +23,41 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/constructor_std_position"
+            android:id="@+id/q_driver_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/constructor_std_name"
+            android:layout_below="@id/q_driver_name"
             android:textStyle="bold"
             android:textSize="32sp" />
 
         <TextView
-            android:id="@+id/constructor_std_points"
+            android:id="@+id/q_driver_const"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/constructor_std_name"
+            android:layout_below="@id/q_driver_name"
             android:layout_marginLeft="@dimen/fab_margin"
-            android:layout_toRightOf="@id/constructor_std_position"/>
+            android:layout_toRightOf="@id/q_driver_position" />
 
         <TextView
-            android:id="@+id/constructor_std_wins"
+            android:id="@+id/q_driver_q1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/constructor_std_name"
-            android:layout_marginLeft="@dimen/fab_margin"
-            android:layout_toRightOf="@id/constructor_std_points" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true" />
 
-        <ImageView
-            android:id="@+id/constructor_std_flag"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        <TextView
+            android:id="@+id/q_driver_q2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:scaleType="fitXY" />
+            android:layout_below="@id/q_driver_q1" />
+
+        <TextView
+            android:id="@+id/q_driver_q3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/q_driver_q2" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
