Add Drivers Fragment and all it needs

--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/last_podium"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="1st"
                 android:textStyle="bold" />
 
@@ -59,6 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/P1_textView"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="2nd"
                 android:textStyle="bold"/>
 
@@ -87,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/P2_textView"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="3rd"
                 android:textStyle="bold"/>
 
@@ -219,6 +222,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/driver_standings_title"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="LOADING..." />
 
             <TextView
@@ -248,6 +252,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/dashb_std_p1_name"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="LOADING..." />
 
             <TextView
@@ -277,6 +282,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/dashb_std_p2_name"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/fab_margin"
                 android:text="LOADING..." />
 
             <TextView
