--- a/app/src/main/res/layout/constructor_list_item.xml
+++ b/app/src/main/res/layout/constructor_list_item.xml
@@ -26,6 +26,7 @@
             android:id="@+id/constructor_list_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_below="@id/constructor_list_name" />
 
         <ImageView
